Emacspeak News --History Of User-Visible Changes
$Id$
Author: T. V. Raman <tv.raman.tv@gmail.com>

* Emacspeak 42 -- Emacspeak 40 User Visible Changes 


** emacspeak-xref.el: Speech-Enable xref.el  

Navigating cross-references in source code.


** emacspeak-package.el

Enhancements for package.el

** EWW Web Support: Emacspeak-eww
   
Enhanced support for EWW, including structured navigation.

** Emacs 25 Support

Speech-enables Emacs 25 features.


** AMark Support For M-Player

You can now mark positions in  an mplayer stream and return to it
later.
This brings the same functionality to emacspeak-m-player that was
formerly available in emacspeak-alsaplayer 

** Better Support For Display  Property 

Handles more cases of property _display_.

